# medcalc

./: .gitignore  Dockerfile  README.md  fastagent.config.yaml  fastagent.jsonl  pyproject.toml  smithery.yaml
MedCalcBench/: README.md  agent.py  fastagent.jsonl  requirements.txt
MedCalcBench/calculator_implementations/: estimated_due_date.py
MedCalcBench/dataset/: test_data.csv  test_data_short.csv
MedCalcBench/evaluation/: fastagent.jsonl  llm_inference.py  run.py  table_stats.py  visualize_json.py
MedCalcBench/evaluation/outputs/: OpenAI_gpt-3.5-turbo-mcp-true-gpt-4.1_direct_answer.jsonl  OpenAI_gpt-3.5-turbo-mcp-true-gpt-4o-100-0_direct_answer.jsonl  OpenAI_gpt-3.5-turbo-mcp-true-gpt-4o-100_direct_answer.jsonl  OpenAI_gpt-3.5-turbo-tools-gpt-4o-100-0-alter_direct_answer.jsonl  OpenAI_gpt-3.5-turbo-tools-gpt-4o-100-0_direct_answer.jsonl  OpenAI_gpt-3.5-turbo-tools-gpt-4o-100_direct_answer.jsonl
MedCalcBench/evaluation/outputs/legacy_0507/: OpenAI_gpt-3.5-turbo-mcp-true-gpt-4.1_direct_answer.jsonl  OpenAI_gpt-3.5-turbo-mcp-true-gpt-4.1_zero_shot.jsonl  (+1 more)
MedCalcBench/evaluation/results/: results_gpt-3.5-turbo-mcp-true-gpt-4.1_zero_shot.json  results_gpt-3.5-turbo-mcp-true-gpt-4o-100-0_direct_answer.json  results_gpt-3.5-turbo-mcp-true-gpt-4o-100_direct_answer.json  results_gpt-3.5-turbo-tools-gpt-4o-100-0-alter_direct_answer.json  results_gpt-3.5-turbo-tools-gpt-4o-100-0_direct_answer.json  results_gpt-3.5-turbo-tools-gpt-4o-100_direct_answer.json
mcpuse/: hello_mcp.py
medcalc/: __main__.py  calculator.py
(+74 files in other folders)
