[project]
name = "medcalc"
version = "0.2.0"
description = "MCP server for Medical Calculation"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Hyung-Chul Lee", email = "vital@snu.ac.kr"}
]
dependencies = ["scipy","mcp"]

[project.scripts]
medcalc = "medcalc.__main__:main"
